2008-03-15  Naba Kumar  <naba@naba-desktop>

	* configure.in:
	* data/Makefile.am:
	* (removed) data/properties:
	* (added) plugins/editor/properties:
	* plugins/editor/Makefile.am:

	Moved data/properties to plugins/editor/ and removed dead code from
	Makefile.am files.
	
2008-03-15  Naba Kumar  <naba@naba-desktop>

	* plugins/macro/macro-db.c (macro_db_dispose), (macro_db_finalize):
	* plugins/macro/macro-dialog.c (macro_dialog_dispose),
	(macro_dialog_finalize):
	* plugins/macro/macro-edit.c (macro_edit_dispose),
	(macro_edit_finalize):

	Fixed errors in previous patch.
	
2008-03-15  Naba Kumar  <naba@naba-desktop>

	Patch from Ignacio Casal Quinteiro:

	* plugins/build-basic-autotools/build-basic-autotools.c (dispose),
	(finalize):
	* plugins/class-gen/plugin.c (dispose), (finalize):
	* plugins/class-inheritance/plugin.c (class_inheritance_finalize),
	(class_inheritance_dispose):
	* plugins/cvs-plugin/plugin.c (finalize), (dispose):
	* plugins/debug-manager/plugin.c (dma_plugin_dispose),
	(dma_plugin_finalize):
	* plugins/debug-manager/queue.c (dma_debugger_queue_dispose),
	(dma_debugger_queue_finalize):
	* plugins/devhelp/plugin.c (devhelp_finalize), (devhelp_dispose):
	* plugins/document-manager/anjuta-docman.c (anjuta_docman_dispose),
	(anjuta_docman_finalize):
	* plugins/document-manager/plugin.c:
	* plugins/editor/plugin.c (dispose), (finalize),
	(editor_plugin_class_init):
	* plugins/editor/text_editor.c (text_editor_dispose),
	(text_editor_finalize):
	* plugins/file-loader/plugin.c (dispose), (finalize),
	(anjuta_file_loader_plugin_class_init):
	* plugins/file-manager/plugin.c (file_manager_finalize),
	(file_manager_dispose):
	* plugins/file-wizard/plugin.c (dispose), (finalize),
	(file_wizard_plugin_class_init):
	* plugins/gdb/debugger.c (debugger_dispose), (debugger_finalize):
	* plugins/gdb/plugin.c (gdb_plugin_dispose), (gdb_plugin_finalize):
	* plugins/glade/plugin.c (glade_plugin_dispose),
	(glade_plugin_finalize), (glade_plugin_class_init):