@@ -2912,6 +2912,7 @@ interface IAnjutaDebugger
 		UNSUPPORTED_VERSION,
 		UNABLE_TO_FIND_DEBUGGER,
 		ALREADY_DONE,
+		PROGRAM_NOT_FOUND,
 		UNKNOWN_ERROR,
 		OTHER_ERROR
 	}
