@@ -1,3 +1,13 @@
+2008-03-17  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/debug-manager/registers.c:
+	Avoid a crash when debugger stop on an error
+
+	* plugins/debug-manager/start.c,
+	plugins/gdb/debugger.c,
+	libanjuta/interfaces/libanjuta.idl:
+	Display an error message when debugger target is not found
+
 2008-03-15  Naba Kumar  <naba@naba-desktop>
 
 	* configure.in:
